Fixed the overflow when the modal is opened on the dashboard and did some cleanup

--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -15,16 +15,18 @@
       width: 10%;
       display: flex;
       flex-direction: column;
-      gap: 2rem;
+      // gap: 2rem;
       align-items: center;
 
       & img {
         display: block;
+        // width: 15rem;
+        height: 8rem;
       }
 
       & h4 {
         color: $color_white;
-        margin: 1rem 0;
+        margin: 0.3rem 0;
         font-size: 1.5rem;
       }
     }
