--- a/src/scss/screens/_resources.scss
+++ b/src/scss/screens/_resources.scss
@@ -1,24 +1,24 @@
 @use "../variables" as *;
 
 /* width */
-::-webkit-scrollbar {
-  width: 1.5rem;
-}
+// ::-webkit-scrollbar {
+//   width: 1.5rem;
+// }
 
-/* Track */
-::-webkit-scrollbar-track {
-  background: #f1f1f1;
-}
+// /* Track */
+// ::-webkit-scrollbar-track {
+//   background: #f1f1f1;
+// }
 
-/* Handle */
-::-webkit-scrollbar-thumb {
-  background: $color-primary;
-}
+// /* Handle */
+// ::-webkit-scrollbar-thumb {
+//   background: $color-primary;
+// }
 
-/* Handle on hover */
-::-webkit-scrollbar-thumb:hover {
-  background: $color-secondary;
-}
+// /* Handle on hover */
+// ::-webkit-scrollbar-thumb:hover {
+//   background: $color-secondary;
+// }
 
 // THe whole resoource page and
 .resources {
